# 2d_3d_Computer_Graphics_lab1

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
